--- a/.github/workflows/java-action.yaml
+++ b/.github/workflows/java-action.yaml
@@ -5,10 +5,10 @@ on:
     branches: ["main"]
 jobs:
   build:
-    runs-on: ubuntu
+    runs-on: windows-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
