--- a/.github/workflows/pruebaCompuesta.yaml
+++ b/.github/workflows/pruebaCompuesta.yaml
@@ -5,15 +5,32 @@ on:
     branches: ["main"]
   workflow_dispatch:
     inputs:
-      mi-valor: #la id de este input es mi valor
-        description: Un valor que paso a este yaml.
+      logLevel:
+        description: 'Log level'
         required: true
-        default: "valor por defecto"
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
+      print_tags:
+        description: 'True to print to STDOUT'
+        required: true
+        type: boolean
+      tags:
+        description: 'Test scenario tags'
+        required: true
+        type: string
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
+
 jobs:
-  build:
-    runs-on: windows-latest
+  print-tag:
+    runs-on: ubuntu-latest
+    if:  ${{ inputs.print_tags }} 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Mostrando el valor que recibo por pantalla
-        run: echo mi-valor=mi-valor.yaml
+      - name: Print the input tag to STDOUT
+        run: echo  The tags are ${{ inputs.tags }} 
