--- a/.github/workflows/llamadorReusable.yaml
+++ b/.github/workflows/llamadorReusable.yaml
@@ -1,10 +1,7 @@
 name: Call a reusable workflow
-
 on:
-  pull_request:
-    branches:
-      - main
-
+  push:
+    branches: ["main"]
 jobs:
   call-workflow:
     uses: belromanc/practice-skeletons/.github/workflows/reusable.yaml@main
