--- a/.github/workflows/llamadorReusable.yaml
+++ b/.github/workflows/llamadorReusable.yaml
@@ -4,4 +4,4 @@ on:
     branches: ["main"]
 jobs:
   call-workflow:
-    uses: .github/workflows/reusable.yaml@main
+    uses: .github/workflows/reusable.yaml@latest
