--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -14,7 +14,4 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v4
-      with:
-        repo-token: ${{ secrets.token }}
-        configuration-path: ${{ inputs.config-path }}
+      - run: echo "🎉 The job was automatically triggered by a event."
